[package]
name = "overlord"
version = "0.1.0"
authors = ["Hasan Ali <git@hasali.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
ctrlc = "3.1"
env_logger = "0.8"
log = "0.4"
tokio = { version = "1", features = ["macros"] }
trillium = "0.1"
trillium-logger = "0.1"
trillium-router = "0.1"
trillium-tokio = "0.1"
